fix draggable labels

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -23,7 +23,7 @@
 <main>
   <div class="c-layers">
     <div class="c-layer">
-      <div class="c-layer__header" draggable="true">
+      <div class="c-layer__header">
         <span class="c-layer__header__label">LAYER 1</span>
         <i class="material-icons c-layer__header__icon-visited">done</i>
         <i class="material-icons c-layer__header__icon-drag" draggable="true">code</i></div>
@@ -59,7 +59,7 @@
       </div>
     </div>
     <div class="c-layer">
-      <div class="c-layer__header" draggable="true">
+      <div class="c-layer__header">
         <span class="c-layer__header__label">LAYER 2</span>
         <i class="material-icons c-layer__header__icon-visited">done</i>
         <i class="material-icons c-layer__header__icon-drag" draggable="true">code</i>
@@ -78,7 +78,7 @@
       </div>
     </div>
     <div class="c-layer">
-      <label class="c-layer__header" draggable="true">
+      <label class="c-layer__header">
         <span class="c-layer__header__label">LAYER 3</span>
         <i class="material-icons c-layer__header__icon-visited">done</i>
         <i class="material-icons c-layer__header__icon-drag" draggable="true">code</i>
